@@ -2,6 +2,7 @@ package com.github.charlyb01.music_control.categories;
 
 import com.github.charlyb01.music_control.client.MusicControlClient;
 import com.github.charlyb01.music_control.client.SoundEventRegistry;
+import com.github.charlyb01.music_control.config.DimensionEventChance;
 import com.github.charlyb01.music_control.config.MiscEventChance;
 import com.github.charlyb01.music_control.config.ModConfig;
 import net.minecraft.entity.player.PlayerEntity;
@@ -19,38 +20,58 @@ import static com.github.charlyb01.music_control.categories.Music.*;
 public class MusicIdentifier {
     private MusicIdentifier() {}
 
-    public static ArrayList<Music> getListFromEvent(final Identifier eventId, final PlayerEntity player,
+    public static HashSet<Music> getListFromEvent(final Identifier eventId, final PlayerEntity player,
                                                     final World world, final Random random) {
-        if (ModConfig.get().general.misc.miscEventChance.equals(MiscEventChance.HALF)
+        HashSet<Music> musics = new HashSet<>();
+
+        if (ModConfig.get().general.event.miscEventChance.equals(MiscEventChance.HALF)
                 && random.nextBoolean()) {
-            return getListFromEvent(eventId);
+            musics.addAll(getListFromEvent(eventId));
+            addDimensionEvent(musics, world, random);
+            return musics;
         }
 
         boolean playerNotNull = player != null;
 
-        ArrayList<Music> musics = new ArrayList<>();
         if (playerNotNull && player.isFallFlying()) musics.addAll(getListFromEvent(SoundEventRegistry.PLAYER_FLYING));
         if (playerNotNull && player.hasVehicle()) musics.addAll(getListFromEvent(SoundEventRegistry.PLAYER_RIDING));
         if (world.isNight()) musics.addAll(getListFromEvent(SoundEventRegistry.TIME_NIGHT));
         if (world.isRaining()) musics.addAll(getListFromEvent(SoundEventRegistry.WEATHER_RAIN));
         if (world.isThundering()) musics.addAll(getListFromEvent(SoundEventRegistry.WEATHER_THUNDER));
 
-        if (!ModConfig.get().general.misc.miscEventChance.equals(MiscEventChance.PROPORTIONAL)
+        if (!ModConfig.get().general.event.miscEventChance.equals(MiscEventChance.PROPORTIONAL)
                 && !musics.isEmpty()) {
             return musics;
         }
 
         musics.addAll(getListFromEvent(eventId));
+        addDimensionEvent(musics, world, random);
         return musics;
     }
 
-    public static ArrayList<Music> getListFromEvent(final Identifier eventId) {
-        ArrayList<Music> musics = new ArrayList<>();
+    private static void addDimensionEvent(final HashSet<Music> musics, final World world, final Random random) {
+        if (ModConfig.get().general.event.dimensionEventChance.equals(DimensionEventChance.FALLBACK)) return;
+        if (ModConfig.get().general.event.dimensionEventChance.equals(DimensionEventChance.NEVER)) return;
+
+        HashSet<Music> dimensionMusic = getListFromEvent(getDimension(world.getRegistryKey()));
+        if (ModConfig.get().general.event.dimensionEventChance.equals(DimensionEventChance.HALF)) {
+            if (random.nextBoolean()) {
+                return;
+            } else if (!dimensionMusic.isEmpty()){
+                musics.clear();
+            }
+        }
+
+        musics.addAll(dimensionMusic);
+    }
+
+    public static HashSet<Music> getListFromEvent(final Identifier eventId) {
+        HashSet<Music> musics = new HashSet<>();
         HashSet<Identifier> checkedEvents = new HashSet<>();
         ArrayList<Identifier> eventsToCheck = new ArrayList<>();
         eventsToCheck.add(eventId);
         while (!eventsToCheck.isEmpty()) {
-            Identifier event = eventsToCheck.remove(0);
+            Identifier event = eventsToCheck.removeFirst();
             if (checkedEvents.contains(event)) continue;
 
             musics.addAll(MUSIC_BY_EVENT.get(event));
@@ -63,7 +84,7 @@ public class MusicIdentifier {
         return musics;
     }
 
-    public static Identifier getFromList(final ArrayList<Music> musics, final Random random) {
+    public static Identifier getFromList(final HashSet<Music> musics, final Random random) {
         if (musics.isEmpty()) return null;
 
         Identifier music;
@@ -73,9 +94,10 @@ public class MusicIdentifier {
             MusicCategories.PLAYED_MUSICS.poll();
         }
 
+        ArrayList<Music> musicList = new ArrayList<>(musics);
         do {
-            music = musics.get(random.nextInt(size)).getIdentifier();
-        } while (MusicCategories.PLAYED_MUSICS.contains(music) && size > MusicCategories.PLAYED_MUSICS.size());
+            music = musicList.remove(random.nextInt(size--)).getIdentifier();
+        } while (MusicCategories.PLAYED_MUSICS.contains(music));
 
         MusicCategories.PLAYED_MUSICS.add(music);
         return music;
@@ -83,29 +105,33 @@ public class MusicIdentifier {
 
     public static Identifier getFromCategory(final Random random) {
         if (MUSIC_BY_NAMESPACE.containsKey(MusicControlClient.currentCategory)) {
-            ArrayList<Music> musics = MUSIC_BY_NAMESPACE.get(MusicControlClient.currentCategory);
+            HashSet<Music> musics = MUSIC_BY_NAMESPACE.get(MusicControlClient.currentCategory);
             return getFromList(musics, random);
         } else {
             return null;
         }
     }
 
+    private static Identifier getDimension(final RegistryKey<World> world) {
+        Identifier eventId;
+        if (world.equals(World.NETHER)) {
+            eventId = new Identifier("music.nether");
+        } else if (world.equals(World.END)) {
+            eventId = SoundEvents.MUSIC_END.value().getId();
+        } else {
+            eventId = SoundEvents.MUSIC_GAME.value().getId();
+        }
+        return eventId;
+    }
+
     public static Identifier getFallback(final RegistryKey<World> world, final boolean creative, final Random random) {
-        ArrayList<Music> musics = null;
-        if (ModConfig.get().general.fallback.dimension) {
-            Identifier eventId;
-            if (world.equals(World.NETHER)) {
-                eventId = new Identifier("music.nether");
-            } else if (world.equals(World.END)) {
-                eventId = SoundEvents.MUSIC_END.value().getId();
-            } else {
-                eventId = SoundEvents.MUSIC_GAME.value().getId();
-            }
-            musics = getListFromEvent(eventId);
+        HashSet<Music> musics = null;
+        if (ModConfig.get().general.event.dimensionEventChance.equals(DimensionEventChance.FALLBACK)) {
+            musics = getListFromEvent(getDimension(world));
         }
 
         if ((musics == null || musics.isEmpty())
-                && ModConfig.get().general.fallback.creative
+                && ModConfig.get().general.event.creativeEventFallback
                 && creative) {
             musics = getListFromEvent(SoundEvents.MUSIC_CREATIVE.value().getId());
         }
